bin_PROGRAMS = smalisp
smalisp_SOURCES = \
    src/config.h \
    src/closure.c \
    src/closure.h \
    src/cmd_opt.c \
    src/cmd_opt.h \
    src/cons.c \
    src/cons.h \
    src/core_lib.c \
    src/core_lib.h \
    src/eval.c \
    src/gc.c \
    src/gc.h \
    src/global.h \
    src/main.c \
    src/mem.c \
    src/mem.h \
    src/pch.c \
    src/rbt.c \
    src/rbt.h \
    src/reader.c \
    src/ref.c \
    src/ref.h \
    src/sl_string.c \
    src/sl_string.h \
    src/smalisp.c \
    src/smalisp.h \
    src/stack.c \
    src/stack_frame.c \
    src/stack_frame.h \
    src/stack.h \
    src/str.c \
    src/str.h \
    src/symbol.c \
    src/symbol.h \
    src/vector.c \
    src/vector.h
